# omnicorectl

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/: architecture.md  architecture.zh-CN.md  control-station.md  control-station.zh-CN.md  live-validation.md  live-validation.zh-CN.md  rapid.md  rapid.zh-CN.md
src/omnicorectl/: __init__.py  __main__.py  cli.py  errors.py  output.py  rapid_cli.py
src/omnicorectl/rws/: __init__.py  client.py  hal.py
src/omnicorectl/services/: __init__.py  backup.py  cfg.py  control_station.py  controller.py  files.py  io.py  rapid.py  rapid_debug.py  rapid_editing.py
tests/: test_backup.py  test_cfg.py  test_cli.py  test_control_station.py  test_controller_status.py  test_files.py  test_hal.py  test_io_networks.py  test_io_signals.py  test_rapid_cli.py  test_rapid_debug.py  test_rapid_editing.py  test_rapid_mutations.py  test_rapid_tasks.py  test_rws_client.py
