[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omnicorectl"
version = "0.1.0.dev0"
description = "Command-line client for ABB OmniCore Robot Web Services 2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1",
]

[project.scripts]
omnicorectl = "omnicorectl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

